# openglrt

./: .clang-tidy  .gitignore  debug.sh  release.sh
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  DisplayWindow.cpp  DisplayWindow.hpp  Raytracer.cpp  Raytracer.hpp  Shader.cpp  Shader.h  Shader.hpp  compile_commands.json  main.cpp
src/.cache/clangd/index/: glad.h.0C56317C73DE5719.idx  main.cpp.DB8AE992F67AE526.idx
src/glad/: glad.c  glad.h
src/shaders/: shader.comp  shader.frag  shader.vert
